# micontrol

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  README.md  SECURITY.md  commitlint.config.cjs  eslint.config.js  index.html  landing.html  package-lock.json  package.json  vite.config.landing.ts  vite.config.mock.ts  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  driverstore-integrity.yml  landing.yml  release-please.yml  release.yml
.husky/: pre-commit
docs/: HARDWARE_INVESTIGATION.md  STABILITY_REPORT_v3.md  STABILITY_REPORT_v4.md  branch-protection.md  frontend-architecture.md  release.md  stability-report-2026-06-24-post-sprints-13-15.md
docs/audit/: post-sprint-22-25-audit-v3.md
docs/code-review/: 2026-06-19-micontrol-comprehensive-audit.md  2026-06-19-micontrol-security-audit.md  2026-07-19-auth-bridge-uac-regression-audit.md
docs/deprecated/: IOT_SHIM_REPORT.md
docs/sprints/: sprint-16-p0-critical-fixes.md  sprint-17-p1-security-devops.md  sprint-18-p1-error-stability.md  sprint-19-p2-architecture-tests.md  sprint-overview.md
scripts/: check-driverstore-integrity.ps1  clean-build-artifacts.mjs  driverstore-allowlist.json  generate-latest-json.mjs  release.cjs  sync-version.cjs
sprint-planning/: sprint-overview.md
sprint-planning/sprint-01-touchpad-charger-fix/: sprint.md
sprint-planning/sprint-01-touchpad-charger-fix/physical-tests/: .gitignore  README.md
sprint-planning/sprint-02-security-critical/: sprint.md
sprint-planning/sprint-03-architecture-stability/: sprint.md
sprint-planning/sprint-04-performance/: sprint.md
sprint-planning/sprint-05-frontend-quality/: sprint.md
sprint-planning/sprint-06-responsible-ai-privacy/: sprint.md
sprint-planning/sprint-07-devops-cicd/: sprint.md
sprint-planning/sprint-08-bug-fixes-edge-cases/: sprint.md
sprint-planning/sprint-26-p2-medium-residual/: sprint.md
sprint-planning/sprint-27-p3-low-polish-v3/: sprint.md
sprint-planning/sprint-28-p3-deferred-backlog/: sprint.md
sprint-planning/sprint-29-p0-critical-high/: sprint.md
sprint-planning/sprint-30-p0-critical-fixes/: plan.md
sprint-planning/sprint-31-p1-high-stubs/: plan.md
sprint-planning/sprint-32-p2-medium-fixes/: plan.md
sprint-planning/sprint-33-p3-low-cleanup/: plan.md
sprint-planning/sprint-34-p0-critical-auth-bridge/: plan.md
sprint-planning/sprint-35-p1-high-temperature-volume/: plan.md
sprint-planning/sprint-36-p2-medium-security-hardening/: plan.md
sprint-planning/sprint-37-p1-high-audio-wifi-features/: plan.md
src/: App.tsx  test-setup.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  clippy.toml  deny.toml  tauri.conf.json  test_all_access.ps1  test_ecram_admin.ps1  test_iot_diag.ps1  test_iot_ipc.ps1  test_iot_ipc2.ps1  test_iot_log.ps1  test_iot_log2.ps1  test_iot_pipes.ps1  test_iot_reg.ps1  test_mi_wmi.ps1  test_pipes.ps1  test_wmi_provider.ps1  windows-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/drivers/IoTDriver/: IoTDriver.cat  IoTDriver.sys  iotdriver.inf
src-tauri/drivers/VirtualControlHID/: VirtualControlHID.cat  VirtualControlHID.sys  virtualcontrolhid.inf
src-tauri/examples/: wmaa_scan.rs  wmaa_scan_focused.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi  installer.nsi
src-tauri/src/: debug_log.rs  elev_bridge.rs  elevated.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  ai_logs.rs  credentials.rs  hardware.rs  hotkeys.rs  mod.rs  privacy.rs  system.rs
src-tauri/src/hw/: audio.rs  battery.rs  battery_test.rs  charging.rs  discovery.rs  display.rs  ecram.rs  errors.rs  fan.rs  hotkeys.rs  iotservice.rs  mic.rs  mod.rs  osd.rs  performance.rs  performance_test.rs  processes.rs  screen_cast.rs  startup.rs  system_info.rs  thermal.rs  touchpad.rs  update.rs  wifi.rs  wmi_cache.rs  wmi_ec.rs
src-tauri/src/hw/hotkeys/: mod.rs
src-tauri/src/util/: ai_usage.rs  auth.rs  blocking.rs  consent_audit.rs  data_deletion.rs  mod.rs  panic.rs  registry.rs  retry.rs  wmi_extract.rs  xml.rs
src-tauri/tests/: test_perf_mode.rs
src/__tests__/: AiConfigForm.test.tsx  BatteryTab.test.tsx  ChargingThreshold.test.tsx  DisplayTab.test.tsx  ErrorBoundary.test.tsx  FanTab.test.tsx  OnboardingWizard.test.tsx  OverviewTab.test.tsx  PerformanceModeSelector.test.tsx  SettingsTab.test.tsx  TrayPopup.test.tsx  useI18n.test.ts
src/components/: AiAdvisor.tsx  AiAnalysis.css  AiAnalysis.tsx  AiConfigForm.tsx  AppUpdateBanner.tsx  AudioControl.tsx  BatteryInfo.tsx  BrightnessOsd.tsx  ChargingThreshold.tsx  ConsentDialog.tsx  DisplaySettings.tsx  EcrDebugPanel.tsx  ErrorBoundary.tsx  FanControl.tsx  HardwareDiscovery.tsx  InfoModal.tsx  IotDeviceCard.tsx  MiControlIcon.tsx  OnboardingWizard.tsx  PerformanceModeSelector.tsx  PerformanceMonitor.tsx  PrivacyConsentSection.tsx  ProcessModal.tsx  ScreenCast.tsx  SettingsPage.tsx  StartupManager.tsx  SystemInfoCard.tsx  ToggleRow.tsx  TouchpadSettings.tsx  UpdateManager.tsx  WiFiManager.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useAnalysisLogger.ts  useAutoUpdate.ts  useHardware.ts  useI18n.ts  useSettings.ts  useTelemetryConsent.ts
src/i18n/: en.json  es.json  fr.json  pt.json
src/landing/: LandingApp.tsx  main.tsx
src/landing/components/: DownloadSection.tsx  FeaturesSection.tsx  Footer.tsx  GearSection.tsx  HeroSection.tsx  LiveAppPreview.tsx  Navbar.tsx  NotebookTeardown.tsx  ProgressIndicator.tsx  SoftwareSection.tsx
src/landing/styles/: landing.css
src/lib/: brightnessPresets.ts
src/mocks/: tauri-api.ts
src/pages/: MainWindow.tsx  PrivacyPolicy.tsx  TrayPopup.tsx
src/pages/tabs/: about.tsx  audio.tsx  setup.tsx  (+5 more)
src/styles/: globals.css
src/types/: error.ts  hardware.ts
(+16 files in other folders)
