[package]
name = "micontrol"
version = "0.1.0"
edition = "2021"
default-run = "micontrol"

[lib]
name = "micontrol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "micontrol"
path = "src/main.rs"

[[bin]]
name = "ecram_shim"
path = "src/bin/ecram_shim.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Registry",
  "Win32_Foundation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Com",
  "Win32_System_Wmi",
  "Win32_System_Services",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Power",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
  "Devices_Sensors",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Security",
] }
wmi = "0.13"
winreg = "0.52"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
