[package]
name = "micontrol"
version = "0.1.1"
edition = "2021"
default-run = "micontrol"

[lib]
name = "micontrol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "micontrol"
path = "src/main.rs"

[[bin]]
name = "test_perf"
path = "src/bin/test_perf.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "net", "process"] }
anyhow = "1"
log = "0.4"
fern = "0.7"
humantime = "2"
thiserror = "1"
hmac = "0.12"
sha2 = "0.11"
hex = "0.4"
rand = "0.8"
fs2 = "0.4"
libloading = "0.8"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", features = ["json"] }
sentry = "0.34"
url = "2"
rayon = "1.10"
aes-gcm = "0.10"
zip = "2"
hkdf = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Registry",
  "Win32_Foundation",
  "Win32_Devices_HumanInterfaceDevice",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Com",
  "Win32_System_Wmi",
  "Win32_System_Services",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Memory",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Power",
  "Win32_Devices_DeviceAndDriverInstallation",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_Devices_Display",
  "Devices_Sensors",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
] }
wmi = "0.13"
winreg = "0.52"

[lints.clippy]
all = { level = "deny", priority = -1 }
# Allow some opinionated lints that are not actionable
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
# Use "unwind" instead of "abort" so panics are recoverable.
# A poisoned mutex (from a panic while holding the lock) can be recovered
# via lock_or_recover() instead of killing the entire process.
panic = "unwind"
codegen-units = 1
lto = true
opt-level = 3
strip = true
